--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mysql": "^2.12.0",
     "request": "^2.79.0",
     "sendgrid": "^4.7.1",
-    "winston": "^2.3.0"
+    "winston": "^2.3.0",
+    "yargs": "^6.5.0"
   }
 }
