--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Stock rating platform",
   "main": "app.js",
   "scripts": {
+    "server": "nodemon --watch server --exec babel-node -- server/server.js",
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,12 +14,24 @@
     "async": "^2.1.4",
     "asyncinterval": "0.0.6",
     "cheerio": "^0.22.0",
+    "express": "^4.14.0",
     "lodash": "^4.17.2",
     "moment": "^2.17.1",
     "mysql": "^2.12.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
     "request": "^2.79.0",
     "sendgrid": "^4.7.1",
     "winston": "^2.3.0",
     "yargs": "^6.5.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "nodemon": "^1.11.0",
+    "webpack": "^1.14.0",
+    "webpack-dev-middleware": "^1.9.0"
   }
 }
