--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mysql": "^2.12.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-router": "^3.0.0",
     "request": "^2.79.0",
     "sendgrid": "^4.7.1",
     "winston": "^2.3.0",
