--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "async": "^2.1.4",
     "asyncinterval": "0.0.6",
+    "axios": "^0.15.3",
     "cheerio": "^0.22.0",
     "express": "^4.14.0",
     "lodash": "^4.17.2",
@@ -20,7 +21,10 @@
     "mysql": "^2.12.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0",
     "request": "^2.79.0",
     "sendgrid": "^4.7.1",
     "winston": "^2.3.0",
